// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account fees utility functions formatMethodFeesTooltip() displays base fee, when only promo discount without percentage or fixed 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        9.84% + $3.65
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        0.8%
      </div>
    </div>
    <div>
      <div>
        Currency conversion fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        11.64% + $3.65
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/fees/#united-states"
          rel="external noreferrer noopener"
          target="_blank"
        >
          <span
            class="components-external-link__contents"
          >
            Learn more
          </span>
          <span
            aria-label="(opens in a new tab)"
            class="components-external-link__icon"
          >
            ↗
          </span>
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;

exports[`Account fees utility functions formatMethodFeesTooltip() displays base percentage and fixed fee - no custom fee nor discount 1`] = `
<div>
  <div
    class="wcpay-fees-tooltip"
  >
    <div>
      <div>
        Base fee
      </div>
      <div>
        12.3% + $4.57
      </div>
    </div>
    <div>
      <div>
        International payment method fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Currency conversion fee
      </div>
      <div>
        1%
      </div>
    </div>
    <div>
      <div>
        Total per transaction
      </div>
      <div
        class="wcpay-fees-tooltip__bold"
      >
        14.3% + $4.57
      </div>
    </div>
    <div
      class="wcpay-fees-tooltip__hint-text"
    >
      <span>
        <a
          class="components-external-link"
          href="https://woocommerce.com/document/woopayments/fees/#united-states"
          rel="external noreferrer noopener"
          target="_blank"
        >
          <span
            class="components-external-link__contents"
          >
            Learn more
          </span>
          <span
            aria-label="(opens in a new tab)"
            class="components-external-link__icon"
          >
            ↗
          </span>
        </a>
         about WooPayments Fees in your country
      </span>
    </div>
  </div>
</div>
`;
